fixed home page arrow position on iphone

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -338,12 +338,17 @@ ol{
 		}
 	}
 }
+.fp-tableCell{
+	.container{
+		position: relative !important;
+	}
+}
 .mobile-absolute-bottom-arrow{
 		position: absolute;
 		display: block;
 		left: 50%;
 		transform: translate(-50%, 0%);
-		bottom: 150px;
+		bottom: -170px;
 		color: #000;
 		&:after{
 			content: "";
